--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                     <div class="col-sm-6">
                         <h3 data-bind="visible:buddyName().length > 0">Your Buddies name is:</h3>
                         <h2 id="buddy" data-bind="text:buddyName"></h2>
-                        <p data-bind="text:message()"></p>
+                        <p class="buddy-status" data-bind="text:message()"></p>
                     </div>
                 </div>
             </div>
