Show connected buddy count

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
             </div>
             <div class="col-md-6">
                 <div class="col-sm-12">
+                    <h1>Currently serving <span data-bind="text: countText()"></span></h1>
+                </div>
+                <div class="col-sm-12">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Your Name:</label>
                         <input type="text" class="form-control" id="noodle-name" placeholder="Anonymous Noodler">
