--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                     <div data-bind="{template: 'tpl-signup'}"></div>
                 <!-- /ko -->
                 </div>
-                <div class="col-sm-12 text-center panel" data-bind="visible: showPanel()">
+                <div class="col-sm-12 text-center panel panel--message" data-bind="visible: showPanel()">
                     <div class="col-sm-4 panel" data-bind="css:panelClass()">
 
                     </div>
