--- a/public/index.html
+++ b/public/index.html
@@ -87,8 +87,7 @@
     <p>Now go enjoy your delicious noodles, <br>you crazy kids!</p>
     </script>
     <script type="text/html" id="tpl-none"></script>
-    <script src='/assets/js/knockout-3.2.0.js'></script>
-    <script src='/assets/js/app.js'></script>
+    <script src='/assets/js/noodlebuddies.min.js'></script>
 </body>
 
 </html>
